--- a/account.html
+++ b/account.html
@@ -141,7 +141,7 @@
 						value="Белочка" required>
 				</li>
 			</ul>
-			<button type="submit" class="button personal-info__button-submit" disabled>Сохранить
+			<button type="submit" class="button-course personal-info__button-submit" disabled>Сохранить
 				изменения</button>
 		</form>
 		<div class="disclaimer-info">
