--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h3 class="accordion__title">1. В каких случаях перспективно применение следовых кинологических расчётов
             </h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon1">
             </div>
           </button>
           <div class="accordion__body">
