Исправлены нарушения методологии БЭМ

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </svg>
               </button>
               <!-- время -->
-              <input class="video__range video__range_time" type="range" min="0" max="100" value="0">
+              <input class="video__range video__range_type_time" type="range" min="0" max="100" value="0">
               <!-- звук -->
               <button data-title="Mute" class="video__volume-button" id="volume-button">
                 <svg class="video__icon-volume">
@@ -95,10 +95,10 @@
                   </use>
                 </svg>
               </button>
-              <input class="video__range video__range_sound" id="volume" type="range" min="0" max="1" value="1"
+              <input class="video__range video__range_type_sound" id="volume" type="range" min="0" max="1" value="1"
                 step="0.01">
               <!-- фуллскрин -->
-              <button class="video__button video__button_fullscreen"></button>
+              <button class="video__button video__button_type_fullscreen"></button>
             </div>
           </div>
         </div>
