--- a/test.html
+++ b/test.html
@@ -263,7 +263,7 @@
 
             <button
               type="submit"
-              class="button button_result button_color_white button_status_succes button__invisible"
+              class="button button__result button_color_white button_status_succes button__invisible"
               aria-label="Пересдать"
               name="restart-btn"
             >
