переименованы классы two-columns

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section class="container">
         <div class="content content_visible">
           <div class="content__header">
-            <p class="content__title">Видео</p>
+            <h1 class="content__title">Видео</h1>
           </div>
           <div class="content__video">
             <video class="video" poster="./images/thumbnail.jpeg"
