--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
         <section class="test">
           <div class="content content_visible" id="test-preview">
             <div class="content__header">
-              <p class="content__title">Тест</p>
+              <h1 class="content__title">Тест</h1>
             </div>
 
             <!-- Блок с тест-превью -->
@@ -80,36 +80,36 @@
               Что мы узнали об особенностях привлечения следовых расчётов на ПСР
               и особенностях взаимодействия между участниками ППС
             </p>
-            <div class="two-columns">
-              <div class="two-columns__left">
-                <div class="two-columns__icons">
+            <div class="columns">
+              <div class="columns__icons-area">
+                <div class="columns__icons">
                   <img
                     src="./images/tick.svg"
-                    class="two-columns__icon two-columns__row"
+                    class="columns__icon columns__row"
                     alt="Галочка"
                   />
                   <img
                     src="./images/repeat.svg"
-                    class="two-columns__icon two-columns__row"
+                    class="columns__icon columns__row"
                     alt="Повтор"
                   />
                   <img
                     src="./images/hourglass.svg"
-                    class="two-columns__icon"
+                    class="columns__icon"
                     alt="Песочные часы"
                   />
                 </div>
-                <div class="two-columns__text-area">
-                  <p class="content__text two-columns__row">Проходной балл:</p>
-                  <p class="content__text two-columns__row">
+                <div class="columns__text-area">
+                  <p class="content__text columns__row">Проходной балл:</p>
+                  <p class="content__text columns__row">
                     Количество попыток:
                   </p>
                   <p class="content__text">Срок сдачи:</p>
                 </div>
               </div>
-              <div class="two-columns__right">
-                <p class="content__text two-columns__row">80%</p>
-                <p class="content__text two-columns__row">3</p>
+              <div class="columns__digits">
+                <p class="content__text columns__row">80%</p>
+                <p class="content__text columns__row">3</p>
                 <p class="content__text">22.02.2022 г. 16:20 (GMT+3)</p>
               </div>
             </div>
@@ -244,7 +244,7 @@
               <div class="content__description">
                 <p class="content__result-text">Отличный результат!</p>
                 <p class="content__result-text">
-                  Нажмите «Далее», чтобы продолжить.<br />
+                  Нажмите «Далее», чтобы продолжить.
                   Если считаете, что можете лучше, нажмите «Пересдать». В случае
                   если результат будет хуже, засчитается наивысший результат.
                 </p>
