Исправление ошибок валидации symbol

--- a/test.html
+++ b/test.html
@@ -126,7 +126,7 @@
           <!-- Блок с вопросами -->
           <div class="content" id="test-body">
             <div class="content__header">
-              <p class="content__title">Тест</p>
+              <h2 class="content__title">Тест<h2>
               <p class="content__conditions">Посмотреть условия</p>
             </div>
 
@@ -272,7 +272,7 @@
           </div>
           <div class="content" id="course-complete">
             <div class="content__header">
-              <p class="content__title">Курс завершен</p>
+              <h2 class="content__title">Курс завершен</h2>
             </div>
             <!-- Блок "Поздравляем/Сожалеем" можно отобразить, добавив класс content__main_active -->
             <div class="content__main">
