Добавил alt к img и hover на элементы

--- a/index.html
+++ b/index.html
@@ -110,29 +110,29 @@
             <h3 class="accordion__title">1. В каких случаях перспективно применение следовых кинологических расчётов
             </h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Видео">
                 <p class="accordion__text">Видео</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Тест">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
@@ -143,29 +143,29 @@
             <h3 class="accordion__title">2. Необходимые обеспечительные меры для успешного применения следовых
               (розыскных собак)</h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Видео">
                 <p class="accordion__text">Видео</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Тест">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
@@ -176,29 +176,29 @@
             <h3 class="accordion__title">3. Особенности привлечения следовых расчётов на ПСР и особенности
               взаимодействия</h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body accordion__body_open">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Видео">
                 <p class="accordion__text">Видео</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Тест">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
@@ -208,13 +208,13 @@
           <button class="accordion__button" type="button" aria-label="Открыть">
             <h3 class="accordion__title">4. Корректная постановка задачи кинологу и особенности её исполнения</h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body accordion__body_open">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
             </ul>
@@ -224,29 +224,29 @@
           <button class="accordion__button" type="button" aria-label="Открыть">
             <h3 class="accordion__title">5. Работа «второго номера» совместно со следовым кинологическим расчётом</h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body accordion__body_open">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Аккордеон">
                 <p class="accordion__text">Дрессировка поисково-спасательных собак</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item accordion__item_active">
-                <img class="menu__icon" src="./images/video-icon-active.svg" alt="icon">
+                <img class="menu__icon" src="./images/video-icon-active.svg" alt="Видео">
                 <p class="accordion__text">Видео</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/test-icon.svg" alt="Тест">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
@@ -257,25 +257,25 @@
             <h3 class="accordion__title">6. Оценка качества и особенности анализа результата проделанной следовым
               кинологическим расчётом работы</h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/lesson-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/lesson-icon.svg" alt="Урок">
                 <p class="accordion__text">Урок</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/webinar-icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/video-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/video-icon.svg" alt="Видео">
                 <p class="accordion__text">Видео</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/test-icon.svg" alt="Тест">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
@@ -286,17 +286,17 @@
             <h3 class="accordion__title">7. Особенности и пределы использования РПРС ом полученной в ходе применения
               специальной следовой собаки информации в целях успешного разрешения поисков</h3>
             <div class="accordion__icon-wrapper">
-              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="Аккордеон">
             </div>
           </button>
           <div class="accordion__body">
             <ul class="accordion__list">
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/webinar-icon.svg" alt="Вебинар">
                 <p class="accordion__text">Вебинар</p>
               </li>
               <li class="accordion__item">
-                <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                <img class="menu__icon" src="./images/test-icon.svg" alt="Тест">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
