--- a/test.html
+++ b/test.html
@@ -556,7 +556,7 @@
                   <img
                     class="menu__icon"
                     src="./images/webinar-icon.svg"
-                    alt="icon"
+                    alt="Вебинар"
                   />
                   <p class="accordion__text">Вебинар</p>
                 </li>
@@ -564,7 +564,7 @@
                   <img
                     class="menu__icon"
                     src="./images/test-icon.svg"
-                    alt="icon"
+                    alt="Тест"
                   />
                   <p class="accordion__text">Тест</p>
                 </li>
