--- a/test.html
+++ b/test.html
@@ -126,7 +126,7 @@
           <!-- Блок с вопросами -->
           <div class="content" id="test-body">
             <div class="content__header">
-              <h2 class="content__title">Тест<h2>
+              <h2 class="content__title">Тест</h2>
               <p class="content__conditions">Посмотреть условия</p>
             </div>
 
